--- a/Flashy/flashycards.plist
+++ b/Flashy/flashycards.plist
@@ -1,14 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-<!--
-   flashycards.plist
-   Flashy
-
-   Created by Whitman Huntley on 6/11/16.
-   Copyright (c) 2016 HyperChicken Interactive. All rights reserved.
--->
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-    <dict>
-    
-    </dict>
+<array>
+	<dict>
+		<key>cardscontained</key>
+		<array>
+			<dict>
+				<key>side1</key>
+				<string></string>
+				<key>side2</key>
+				<string></string>
+			</dict>
+			<dict>
+				<key>side1</key>
+				<string></string>
+				<key>side2</key>
+				<string></string>
+			</dict>
+		</array>
+		<key>name</key>
+		<string></string>
+		<key>uniqueid</key>
+		<integer>0</integer>
+		<key>initializedViaEncoder</key>
+		<true/>
+	</dict>
+</array>
 </plist>
